animation with css

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
     <link rel="icon" type="image/png" href="logo.png">
 </head>
 <body>
+<div class="bgAnimation" id="bgAnimation" aria-hidden="true">
+    <div class="backgroundAmim">
+
+    </div>
+</div>
 <main class="container">
     <h1>Phone Number to WhatsApp message</h1>
     <article class="card">
@@ -53,5 +58,6 @@
 </footer>
 <script src="js/mouse-effect.js"></script>
 <script src="js/complete-url.js"></script>
+<script src="js/background-animation.js"></script>
 </body>
 </html>
