footer and metas

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     <link rel="stylesheet" href="css/styles.css">
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="logo.png">
+    <!-- Meta -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Phone number to WhatsApp" />
+    <meta property="og:description" content="Place a phone number and get the link for whatsapp" />
+    <meta property="og:image" content="readme.jpg" />
 </head>
 <body>
 <div class="bgAnimation" id="bgAnimation" aria-hidden="true">
