--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </article>
 </main>
 <footer>
-    <p>Made with ❤️ by <a href="https://github.com/MattEzekiel" target="_blank">Matías Bubello</a></p>
+    <p>Made by <a href="https://github.com/MattEzekiel" target="_blank">Matías Bubello</a></p>
 </footer>
 <script src="js/mouse-effect.js"></script>
 <script src="js/complete-url.js"></script>
