og:image and og:url

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Phone number to WhatsApp" />
     <meta property="og:description" content="Place a phone number and get the link for whatsapp" />
-    <meta property="og:image" content="/readme.jpg" />
+    <meta property="og:image" content="https://whatsappgenerator.netlify.app//readme.jpg" />
+    <meta property="og:url" content="https://whatsappgenerator.netlify.app/" />
 </head>
 <body>
 <div class="bgAnimation" id="bgAnimation" aria-hidden="true">
