almoust the animation that i want

--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
     <meta property="og:url" content="https://whatsappgenerator.netlify.app/" />
 </head>
 <body>
-<div class="bgAnimation" id="bgAnimation" aria-hidden="true">
-    <div class="backgroundAmim">
-
-    </div>
+<div id="circuits" aria-hidden="true">
+    <div id="circle"></div>
 </div>
 <main class="container">
     <h1>Phone Number to WhatsApp message</h1>
@@ -64,6 +62,5 @@
 </footer>
 <script src="js/mouse-effect.js"></script>
 <script src="js/complete-url.js"></script>
-<script src="js/background-animation.js"></script>
 </body>
 </html>
