this is how I wanted!

--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
     <meta property="og:url" content="https://whatsappgenerator.netlify.app/" />
 </head>
 <body>
-<div id="circuits" aria-hidden="true">
-    <div id="circle"></div>
-</div>
+<canvas id="canvas"></canvas>
 <main class="container">
     <h1>Phone Number to WhatsApp message</h1>
     <article class="card">
@@ -62,5 +60,6 @@
 </footer>
 <script src="js/mouse-effect.js"></script>
 <script src="js/complete-url.js"></script>
+<script src="js/circuit-pulse.js"></script>
 </body>
 </html>
