--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
     <meta property="og:description" content="Place a phone number and get the link for whatsapp" />
     <meta property="og:image" content="https://whatsappgenerator.netlify.app//readme.jpg" />
     <meta property="og:url" content="https://whatsappgenerator.netlify.app/" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5XEHJ9QYB5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-5XEHJ9QYB5');
+    </script>
 </head>
 <body>
 <canvas id="canvas"></canvas>
