--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </article>
 </main>
 <footer>
-    <p>Made by <a href="https://github.com/MattEzekiel" target="_blank">Matías Bubello</a></p>
+    <p>Made by <a href="https://github.com/MattEzekiel" target="_blank">Matías Bubello <img src="https://github.com/MattEzekiel.png" alt="Matt Ezekiel github avatar" title="avatar github"></a></p>
 </footer>
 <script src="js/mouse-effect.js"></script>
 <script src="js/complete-url.js"></script>
