--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
         gtag('config', 'G-5XEHJ9QYB5');
     </script>
+    <!-- Meta adsense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3260430170568187" crossorigin="anonymous"></script>
 </head>
 <body>
 <canvas id="canvas"></canvas>
