adsense meta tag

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         gtag('config', 'G-5XEHJ9QYB5');
     </script>
     <!-- Meta adsense -->
+    <meta name="google-adsense-account" content="ca-pub-3260430170568187">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3260430170568187" crossorigin="anonymous"></script>
 </head>
 <body>
